# budgeting_app

./: .gitignore  README.md  manage.py  pyproject.toml
budgeting/: firebase_config.py  forms.py  models.py  schema.py  urls.py  views.py
budgeting/migrations/: 0001_initial.py
budgeting/templates/budgeting/: add_transaction.html  edit_transaction.html  transaction_list.html
budgeting_project/: asgi.py  settings.py  urls.py  wsgi.py
